[tool.poetry]
name = "renconstruct"
version = "1.4.0"
description = "A utility script for automatically building Ren'Py applications for multiple platforms."
authors = ["CobaltCore <cobaltcore@yandex.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/kobaltcore/renconstruct"
homepage = "https://github.com/kobaltcore/renconstruct"

[tool.poetry.scripts]
renconstruct = "renconstruct.renconstruct:cli"

[tool.poetry.dependencies]
python = "^3.6"
click = "^7.1.2"
pyyaml = "^5.3.1"
tqdm = "^4.51.0"
termcolor = "^1.1.0"
renutil = "^1.12.0"
renotize = "^1.2.0"
diff-match-patch = "^20200713"
PyYAML = "^5.3.1"
rich = "^9.1.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
pytest = "^6.0.1"
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
