[tool.poetry]
name = "renconstruct"
version = "1.9.0"
description = "A utility script for automatically building Ren'Py applications for multiple platforms."
authors = ["CobaltCore <cobaltcore@yandex.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/kobaltcore/renconstruct"
homepage = "https://github.com/kobaltcore/renconstruct"

[tool.poetry.scripts]
renconstruct = "renconstruct.renconstruct:cli"

[tool.poetry.dependencies]
python = "^3.7"
click = "^8.1.3"
tqdm = "^4.64.0"
termcolor = "^1.1.0"
renutil = "^1.15.4"
renotize = "^1.5.3"
diff-match-patch = "^20200713"
PyYAML = "^5.4.1"
rich = "^10.16.2"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pytest = "^7.1.2"
black = "^22.3.0"
pre-commit = "^2.19.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
